--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
     <div class="main-content">
         {{>header}}
         <p>About page</p>
+        <p>This page is to show you some information about the website!</p>
         <img src="../images/federer.jpg" alt="Federer" class="portrait">
     </div>
 
